--- a/widget/demo.html
+++ b/widget/demo.html
@@ -84,8 +84,7 @@
   <script>
     // Initialize Blindspot
     Blindspot.init({
-      repo: 'JasperNoBoxDev/blindspot',
-      workerUrl: 'https://blindspot-worker.jasper-414.workers.dev'
+      siteId: 'demo'
     });
 
     // Update status
